src/styles/global.css
:root {
  --green-color: #14532d;
  --gray-bg: #e5e7eb;
}

html,
body {
  margin: 0;
  height: 100%;
}

body {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
  padding: 1rem;
  box-sizing: border-box;
  font-family: sans-serif;
  color: var(--green-color);
  background-color: var(--gray-bg);
  fill: var(--green-color);
}

.mt-auto {
  margin-top: auto;
}

.margin-right-small {
  margin-right: 0.5rem;
}

.text-left {
  text-align: left;
}

